fix jumping fixed elements

--- a/frontend/src/components/PetitionCard/PetitionCard.scss
+++ b/frontend/src/components/PetitionCard/PetitionCard.scss
@@ -5,7 +5,7 @@
   padding-bottom: 22px;
 
   &__title {
-    margin: 0 0 12px 0;
+    margin: 0 0 8px 0;
     font-size: 20px;
     line-height: 24px;
   }
@@ -15,11 +15,11 @@
     overflow: hidden;
     background-size: cover;
     background-repeat: no-repeat;
-    margin: 0 0 12px 0;
+    margin: 0;
   }
 
   &__users_stack {
-    margin: 0;
+    margin: 12px 0 0 0;
     padding: 0;
   }
 }
