--- a/frontend/src/components/PetitionTabbar/PetitionTabbar.scss
+++ b/frontend/src/components/PetitionTabbar/PetitionTabbar.scss
@@ -4,11 +4,25 @@
   height: 112px !important; // 68px
   display: flex;
   flex-direction: column;
+  padding-bottom: var(--safe-area-inset-bottom) !important;
+
+  &::before {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #d7d8d9;
+    background: var(--separator_common);
+    -webkit-transform-origin: center bottom;
+    transform-origin: center bottom;
+    content: '';
+  }
 
   &__signed {
-    margin: 0 auto;
     display: flex;
     align-items: center;
+    justify-content: center;
     color: $petition-signed-text-color;
 
     &__icon {
